# fimsh

./: .env  :  ::w  Cargo.toml  build.rs  idea.md  init.sql
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx  user.tsx
client/src/components/: Navbar.tsx  index.ts  style.css
client/src/components/markdown/: Markdown.tsx
client/src/lib/: auth.ts
client/src/pages/: index.ts  style.css
client/src/pages/home/: Home.tsx
client/src/pages/login/: Login.tsx
client/src/pages/me/: Me.tsx
client/src/pages/signUp/: SignUp.tsx  style.css
src/: account.rs  error.rs  main.rs  util.rs
src/auth/: auth.rs  mod.rs
src/db/: model.rs  schema.rs
