[package]
name = "fimsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
axum-extra = {version = "0.9.1" , features = ["cookie"]}
bcrypt = "0.15.0"
diesel = {version = "2.1.4" , features = ["postgres" , "uuid"]}
diesel-async = {version = "0.4.1" , features = ["postgres" , "bb8"]}
dotenvy = "0.15.7"
serde = {version = "1.0.193" , features = ["derive"]}
thiserror = "1.0.52"
tokio = {version = "1.35.1" , features = ["macros" , "rt-multi-thread"]}
tower-http = {version = "0.5.0" , features = ["trace" , "fs"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = {version = "1.6.1" , features = ["v4"]}
validator = {version = "0.16.1" , features = ["derive"]}
